--- a/PsRun/App.xaml
+++ b/PsRun/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PsRun"
-             StartupUri="MainWindow.xaml">
+             Startup="EntryPoint">
     <Application.Resources>
          
     </Application.Resources>
